Plot_actions/logs/old_params_lr_2e-4_200k_cash_7_e-11(eps=0.7)_24h_slurm_15726389.err
  File "/g100/home/userexternal/palfi000/ucl-thesis-main/abides-gym/scripts/dqn_train_intel.py", line 45
    "max_holdings": 10,
    ^
SyntaxError: invalid syntax
